--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-select": "^5.2.2",
     "sass": "^1.49.9",
     "web-vitals": "^2.1.4"
   },
+  "proxy": "http://localhost:8001",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
