--- a/client/package.json
+++ b/client/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "@dice-roller/rpg-dice-roller": "^5.1.0",
+    "@material/floating-label": "^13.0.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "dnd-npc": "^1.1.6",
     "lodash.kebabcase": "^4.1.1",
+    "material-components-web": "^13.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
